[package]
name = "tiller"
description = "Tiller tills TILs into a static site"
version = "0.4.3"
authors = ["William Woodruff <william@yossarian.net>"]
readme = "README.md"
homepage = "https://github.com/woodruffw/tiller"
repository = "https://github.com/woodruffw/tiller"
keywords = ["til", "today-i-learned"]
categories = ["web-programming", "template-engine"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
comrak = "0.36.0"
gray_matter = "0.2.8"
handlebars = { version = "6.2.0", features = ["rust-embed"] }
rss = "2.0.12"
rust-embed = "8.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
slug = "0.1.6"
syntect = "5.2.0"
toml = "0.8.20"
