[package]
name = "tiller"
description = "Tiller tills TILs into a static site"
version = "0.4.3"
authors = ["William Woodruff <william@yossarian.net>"]
readme = "README.md"
homepage = "https://github.com/woodruffw/tiller"
repository = "https://github.com/woodruffw/tiller"
keywords = ["til", "today-i-learned"]
categories = ["web-programming", "template-engine"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
comrak = "0.50.0"
gray_matter = "0.3.2"
handlebars = { version = "6.2.0", features = ["rust-embed"] }
rss = "2.0.12"
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slug = "0.1.6"
syntect = "5.3.0"
toml = "0.9.11"
